# distributed-task-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
monitoring/: prometheus.yml
scripts/: create_sample_data.py  setup_dev.sh
src/: __init__.py
src/api/: __init__.py
src/api/middleware/: __init__.py
src/api/routes/: __init__.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  metrics.py
src/models/: __init__.py  base.py
src/services/: __init__.py
src/utils/: decorators.py
src/worker/: __init__.py  celery_app.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_task_model.py
